# visitor

./: Cargo.toml  README.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: ci.yml
template/: Cargo.toml
template/src/: lib.rs
traversable/: Cargo.toml
traversable-derive/: Cargo.toml  README.md
traversable-derive/src/: lib.rs
traversable/src/: lib.rs
traversable/src/impls/: mod.rs  ordered_float_5.rs  stacksafe_01.rs  stacksafe_1.rs
traversable/tests/: test_make_visitor.rs  test_ordered_float_5.rs  test_visitor_mut.rs
visitor/: Cargo.toml
visitor-derive/: Cargo.toml
visitor-derive/src/: lib.rs
visitor/src/: lib.rs
visitor/src/function/: mod.rs
visitor/src/impls/: function_visitor.rs  mod.rs  stacksafe_01.rs
visitor/tests/: test_make_visitor.rs  test_ordered_float_5.rs  test_visitor_mut.rs
xtask/: Cargo.toml
xtask/src/: main.rs
