# Copyright 2025 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "traversable"
version = "0.1.0"

description = "Visitor Pattern over Traversable data structures"
documentation = "https://docs.rs/traversable"
keywords = ["visitor", "traverse", "traversable"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
derive = ["dep:traversable-derive"]

# Implement Traversal for standard library types.
std = []

# Visit all trivial types.
#
# By default, a.k.a., without this feature, Traversal implements no-ops for trivial types.
# Because in many cases, users want to visit only non-trivial types, and no ops can be
# applied when traversing trivial types like integers, floats, booleans, and unit.
traverse-trivial = []

# Visit all primary standard library types.
#
# By default, a.k.a., without this feature, Traversal implements no-ops for primary standard
# library types. Currently, primary standard library types include only String.
#
# Containers like Vec, Option, Result, HashMap, etc., are not considered primary standard
# library types, because they are generic over their contained types, and thus can be
# traversed via their contained types.
traverse-std = []

# Implement Traversal for third-party library types.
ordered-float-5 = ["dep:ordered-float-5"]
stacksafe-1 = ["dep:stacksafe-1"]

[dependencies]
traversable-derive = { workspace = true, optional = true }

# Optional dependencies for third-party library support
ordered-float-5 = { version = "5.1", default-features = false, optional = true, package = "ordered-float" }
stacksafe-1 = { version = "1", default-features = false, optional = true, package = "stacksafe" }

[lints]
workspace = true
